kubernetes-deployments/ingress-traefik/ingress-routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`cln01`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: frontend
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`cln01`) && PathPrefix(`/api`)
    kind: Rule
    services:
    - name: backend
      port: 8080
